--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-spring/web": "9.5.5",
+    "classnames": "2.3.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "6.4.2",
-    "@react-spring/web": "9.5.5"
+    "sass": "^1.55.0"
   },
   "devDependencies": {
     "@antfu/eslint-config": "0.27.0",
