用户手势可以进入下一页

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,7 @@
 {
   "extends": "@antfu",
   "rules": {
+    "@typescript-eslint/brace-style": "off",
     "@typescript-eslint/comma-dangle": "off"
   }
 }
