--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@react-spring/web": "9.5.5",
     "axios": "1.1.3",
     "classnames": "2.3.2",
+    "mockjs": "1.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "6.4.2",
     "sass": "1.55.0",
     "styled-components": "5.3.6",
     "swr": "1.3.0",
+    "vite-plugin-mock": "2.9.6",
     "zustand": "4.1.4"
   },
   "devDependencies": {
