--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "react-router-dom": "6.4.2",
     "sass": "1.55.0",
     "styled-components": "5.3.6",
+    "svgo": "3.0.1",
+    "svgstore": "3.0.1",
     "swr": "1.3.0",
     "vite-plugin-mock": "2.9.6",
     "zustand": "4.1.4"
